# wpcare5

./: README.md  docker-compose.yml  frontend.Dockerfile  serverapi.Dockerfile
astro-project/: package-lock.json  package.json
astro_frontend/: CODENOTES.md  INSTALL.md
astro_frontend/src/components/: Navigation.astro  PageHeader.astro  PageHeader.scss  Table.astro  Table.scss  menu.json
astro_frontend/src/pages/: index.astro
astro_mockup/: CODENOTES.md  INSTALL.md  bun.lockb  package.json
astro_mockup/src/components/: ContentBox.astro  ContentRow.astro  Navigation.astro  NavigationItem.astro  Table.astro  menu.json
astro_mockup/src/data/: sites.json
astro_mockup/src/layouts/: BaseLayout.astro
astro_mockup/src/pages/: about.astro  dashboard.astro  index.astro
astro_mockup/src/styles/: main.scss
flowbite-admin-dashboard/: bun.lockb  package.json
lib/pywpcare/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
lib/pywpcare/pywpcare/: __init__.py  version.py
lib/pywpcare/pywpcare/models/: site.py
lib/pywpcare/pywpcare/ports/db/: __init__.py  db.py
lib/pywpcare/tests/: test_models_site.py  test_ports_db.py
my-astro-project-using-bun/: bun.lockb  package.json
pycurl_crawler/: .gitignore  INSTALL.md  requirements.txt
pycurl_crawler/data/: .keep_dir_in_git  pages.json
pycurl_crawler/src/: main.py  pagesExplorer.py
pycurl_crawler/src/crawlerlib/: crawler.py  links.py  page.py  pages.py  visit.py
pyflask_api/src/: app.py
pysel_crawler/: INSTALL.md  pytest.ini  requirements.txt
pysel_crawler/src/: main.py
(+28 files in other folders)
