[build-system]
requires = ["setuptools >= 68.1.2"]
build-backend = "setuptools.build_meta"

[project]
#dynamic = ["version"]
name = "pywpcare"
version = "0.0.1"
authors = [
  { name = "vanGamo", email = "vangamo.beta@gmail.com" }
]
maintainers = [
  { name = "vanGamo", email = "vangamo.beta@gmail.com" }
]
description = "Python library to manage WPCare datamodel"
readme = { file = "README.txt", content-type = "text/markdown" }
license = { text = "MIT License" }
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8"
]
requires-python = ">= 3.8"
dependencies = ["wheel", "psycopg2-binary"]

[project.optional-dependencies]
dev = ["pytest >= 8.1.1"]

[project.urls]
Homepage = ""
Documentation = "https://github.com/vangamo/wpcare5/blob/main/README.md"
Repository = "https://github.com/vangamo/wpcare5/"
Issues = "https://github.com/vangamo/wpcare5/issues"
Changelog = "https://github.com/vangamo/wpcare5/releases"

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]